refactor get all method, add pagination and validate address using opencage geocode
